--- a/build.xml
+++ b/build.xml
@@ -8,8 +8,6 @@
  <property name="dist.home" value="${basedir}\PricerFileAdapterSoca" />
  <property name="bin.home" value="${basedir}/bin" />
  <property name="encoding.compilation" value="UTF-8" />
- <property name="java.version" value="1.6" />
- 
  
  
  <target name="all" depends="init, compile, create_run_jar" description="clean and compile jar distribution" />
@@ -45,32 +43,27 @@
 		
 	</javac>
 	</target>
- 
- 
- 
- 
- 
-  <target name="create_run_jar">
-     
+
+
+
+
+
+    <target name="create_run_jar">
+
         <jar destfile="${dist.home}/${app.name}.jar" filesetmanifest="mergewithoutmain">
-           <manifest>
-           <attribute name="Main-Class" value="${app.main.class}"/>
-           <attribute name="Class-Path" value="."/>
-           </manifest>
-           <fileset 	dir="${basedir}\bin"/>
-       	
-       		
-       	<zipfileset excludes="META-INF/*.SF" src="${basedir}\lib\commons-net-3.6.jar"/>
-       	<zipfileset excludes="META-INF/*.SF" src="${basedir}\lib\ini4j-0.5.4.jar"/>
-	 	<zipfileset excludes="META-INF/*.SF" src="${basedir}\lib\log4j-1.2.17.jar"/>	
-	 	<zipfileset excludes="META-INF/*.SF" src="${basedir}\lib\cron4j-2.2.5.jar"/>	
-        <zipfileset excludes="META-INF/*.SF" src="${basedir}\lib\mysql-connector-java-8.0.17.jar"/>	
-          
+            <manifest>
+                <attribute name="Main-Class" value="${app.main.class}"/>
+                <attribute name="Class-Path" value="."/>
+            </manifest>
+            <fileset 	dir="${basedir}\bin"/>
+
+
+            <zipgroupfileset dir="${basedir}\lib" includes="**/*.jar" />
         </jar>
-    
-         
-        
-</target>
+
+
+
+    </target>
  
  
  </project>
